# whisperkey-mac

./: .gitignore  CONTEXT.md  HANDOFF-20260414-sigtrap-debug.md  HANDOFF-20260415-codesign.md  HANDOFF-20260415-voice-cleanup.md  HANDOFF-20260417-orb-redesign.md  HANDOFF-20260419-hotkey-suppression.md  HANDOFF-20260419-voiceinput-redesign.md  LICENSE  README.md  README.zh.md  STATUS.md  VibeMouse.command  WhisperKey.command  pyproject.toml  start.sh  voice-cleanup-prompt.md
.planning/: INDEX.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/: README.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  README.md  STACK.md
packaging/macos/: WhisperKey.spec  build_app.sh  generate_icon.py  (+1 more)
tests/: conftest.py  test_app_entry.py  test_audio.py  test_ax_detect.py  test_config.py  test_help_cmd.py  test_keyboard_listener.py  test_keychain.py  test_launch_agent.py  test_main.py  test_menu_bar.py  test_online_correct.py  test_output.py  test_overlay.py  test_settings_window.py  test_setup_wizard.py  test_supervisor.py  test_transcriber.py
vibemouse_mac/: audio.py  config.py  help_cmd.py  i18n.py  keyboard_listener.py  main.py  mouse_listener.py  output.py  setup_wizard.py  transcriber.py
whisperkey_mac/: app_entry.py  audio.py  ax_detect.py  config.py  diagnostics.py  help_cmd.py  i18n.py  keyboard_listener.py  keychain.py  launch_agent.py  main.py  menu_bar.py  mouse_listener.py  online_correct.py  output.py  overlay.py  service_controller.py  settings_window.py  setup_wizard.py  supervisor.py  transcriber.py  usage_log.py
(+21 files in other folders)
